tests/ui/resolve/issue-103202.stderr
error[E0223]: ambiguous associated type
  --> $DIR/issue-103202.rs:4:17
   |
LL |     fn f(self: &S::x) {}
   |                 ^^^^ help: use fully-qualified syntax: `<S as Trait>::x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
